objects/wkitsm__CaseAssetAssociation__c.object
<CustomObject>
    <fields>
        <fullName>wkitsm__AssetId__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Asset Id</label>
        <referenceTo>Asset</referenceTo>
        <relationshipName>CaseAssetAssociationsAsset</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>wkitsm__BatchId__c</fullName>
        <label>Batch Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wkitsm__CaseId__c</fullName>
        <label>Case Id</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Case Asset Associations</relationshipLabel>
        <relationshipName>CaseAssetAssociations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Case Asset Association</label>
    <nameField>
        <label>CaseAssetAssociation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Case Asset Associations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>